[tool.poetry]
name = "monarch-agent"
version = "0.1.0"
description = "LLM retrieval augmented generation agent for Monarch."
authors = ["Shawn O'Neil <oneilsh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.10,<4.0"
streamlit = "^1.26.0"
python-dotenv = "^1.0.0"
kani-utils = {git = "https://github.com/oneilsh/kani-utils.git", branch = "stream"}
httpx = "^0.27.0"
neo4j = "^5.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
