[tool.poetry]
name = "phenomics-assistant"
version = "0.1.0"
description = "LLM retrieval augmented generation agent for Monarch."
authors = ["Shawn O'Neil <oneilsh@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python=">=3.12,<4.0"
streamlit = "^1.26.0"
python-dotenv = "^1.0.0"
kani-utils = {git = "https://github.com/oneilsh/kani-utils.git", branch = "stream"}
httpx = "^0.24.0"
neo4j = "^5.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
